--- a/template.html
+++ b/template.html
@@ -12,9 +12,9 @@
     <!-- <h1>My Portfolio</h1> -->
     <h1 class="logo">Kavinda.C@outlook.com</h1>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#projects">Projects</a>
-        <a href="#projects">About Me</a>
+        <a href="index.html">Home</a>
+        <a href="project.html">Projects</a>
+        <a href="aboutme.html">About Me</a>
 
     </nav>
 </header>
