--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -49,10 +49,13 @@
                 <h2>Experience</h2>
                 <h3>Dialog Axiata PLC 2023 (Jan-July)</h3>
                 <p>Position : Developer </p>
-                <p>I developed a robust and scalable application leveraging a combination of technologies including React, 
-                    Tailwind CSS, Spring Boot, and RESTful APIs. The project involved integrating with
-                     the Elastic Service Dashboard, implementing email functionality with DynamoDB,
-                     and ensuring secure data retrieval using VPN and proxy.</p>
+                <p>During my internship at Dialog Axiata, I took a leading role in developing the Dashboard for
+                    AWS Elastic Service. Throughout this project, I actively engaged in both front-end and backend aspects. I employed the React.js library for front-end development, focusing particularly
+                    on visualizing intricate details of the Elastic Service obtained from the RestAPI.
+                    In the backend, I established connections using the Spring Boot framework and Java, linking
+                    with DynamoDB via Proxy and VPN to ensure secure and efficient data communication.
+                    The culmination of this effort is a Dashboard equipped with several functions, including the
+                    capability to save emails in the database through RestAPI.</p>
                      <ul>
                         <li>React: Utilized React to build a modern and interactive user interface,
                              providing a seamless user experience and efficient data rendering.</li>
@@ -80,7 +83,7 @@
             <div class="about-me-text">
                 <h2>Education</h2>
                 <h3>Cardiff Metropolitain Univercity (2020 - 2023)</h3>
-                <p>BSc (Honors) Software Engineering </p>
+                <h4>BSc (Hons) Software Engineering </h4>
                 <h4>Technologies  : Java, JavaScript, PHP, MYSQL, MSSQL, ReactJs, Spring Boot, Python, HTML, CSS, Bootstrap</h4>
                 
             </div>
