--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
                 <p>Web applicaqtion to predict bees absconding form bees colonies.</p>
             </div>
             <div class="project">
-                <img src="images\projects\Dialog\img5.jpeg" alt="Project 2">
-                <h3>Elastic Service Dashboard</h3>
-                <h3>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h3>
+                <a href="" class="link"><img src="images\projects\Dialog\img5.jpeg" alt="Project 2"></a>
+                <a href="" class="link"> <h3>Elastic Service Dashboard</h3></a>
+                <a href="" class="link"><h3>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h3></a>
                 <p>Project involved integrating with the Elastic Service Dashboard.</p>
             </div>
             
             <div class="project">
-                <img src="images\projects\Custome-Auth-MVC\Register-Page.jpg" alt="Project 2">
-                <h3>Custom Authentication</h3>
-                <h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3>
+                <a href="" class="link"><img src="images\projects\Custome-Auth-MVC\Register-Page.jpg" alt="Project 2"></a>
+                <a href="" class="link"><h3>Custom Authentication</h3></a>
+                <a href="" class="link"><h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <div class="project">
-                <img src="images\projects\Student-MVC\Student-Page.jpg" alt="Project 2">
-                <h3>Student Managemnt CRUD System</h3>
-                <h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3>
+                <a href="" class="link"><img src="images\projects\Student-MVC\Student-Page.jpg" alt="Project 2"></a>
+                <a href="" class="link"><h3>Student Managemnt CRUD System</h3></a>
+                <a href="" class="link"><h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3></a>
                 <p>Web applicaqtion for Managing Employee system.</p>
             </div>
             
             <div class="project">
-                <img src="images\projects\Web-API-Task-CRUD\Web-API-1.jpg" alt="Project 2">
-                <h3>WEB API CRUD System</h3>
-                <h3>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h3>
+                <a href="" class="link"><img src="images\projects\Web-API-Task-CRUD\Web-API-1.jpg" alt="Project 2"></a>
+                <a href="" class="link"><h3>WEB API CRUD System</h3></a>
+                <a href="" class="link"><h3>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h3></a>
                 <p>Simple web applicaqtion theme park system.</p>
             </div>
             <div class="project">
-                <img src="images\projects\proj2-Go-Cheeta.jpg" alt="Project 2">
-                <h3>Go-Cheeta-Texi-Service</h3>
-                <h3>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h3>
+                <a href="" class="link"><img src="images\projects\proj2-Go-Cheeta.jpg" alt="Project 2"></a>
+                <a href="" class="link"><h3>Go-Cheeta-Texi-Service</h3></a>
+                <a href="" class="link"><h3>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h3></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <!-- Add more projects as needed -->
