--- a/aboutme.html
+++ b/aboutme.html
@@ -33,14 +33,42 @@
                      and Spring Boot, with a proven track record of delivering 
                      high-quality solutions that meet business needs and exceed customer expectations.</p>
                 <div class="social-media-icons">
-                    <a href="https://github.com/Ckavinda98"><img src="images\general\Github_logo_PNG1.png" alt="Social Icon 1"></a>
-                    <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"><img src="images\general\Linkedin_logo_PNG3.png" alt="Social Icon 2"></a>
+                    <a href="https://github.com/Ckavinda98"><img src="images\general\Github_logo_PNG1.png" alt="Social Icon 1" id="custom-icon"></a>
+                    <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"><img src="images\general\Linkedin_logo_PNG3.png" alt="Social Icon 2" ></a>
+                    <a href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"><img src="images\general\CV1.png" alt="Social Icon 2" id="custom-icon"></a>
                     <!-- Add more social media icons as needed -->
                 </div>
                 <div class="social-media-icons">
                     <h2>Contact Details</h2>
                     <p>Email : Kavinda.C@outlook.com</p>
                 </div>
+            </div>
+        </div>
+        <div class="about-me-card">
+            
+            <div class="about-me-text">
+                <h2>Skills</h2>
+                <h3>Acaademic & Enterprise (2020 - Present)</h3>
+                     <ul>
+                        <li>One year of academic experience and six months of professional experience in
+                            Reactjs.</li>
+                        <li>Two years of academic experience and six months of professional experience in
+                            JavaScript and ES6.</li>
+                        <li>Two years of academic experience and six months in Java and Hibernate Spring Boot
+                            Framework.</li>
+                        <li>One year of academic experience with C#, MVC architecture, and the .NET
+                            framework/ASP.NET, including familiarity with .NET Core and ASP.NET Web API.</li>
+                        <li>One year of academic experience with Angular for front-end developmen</li>
+                        <li>Three years of academic and professional experience in HTML, CSS, and Tailwind.</li>
+                        <li>Two years of academic and professional experience in GitHub and GitLab.</li>
+                        <li>Six months of professional experience in AWS DynamoDB, coupled with two years
+                            of academic exposure to NoSQL, SQL, and MySQL databases.</li>
+                        <li>Six months of professional experience in Agile Methodology.</li>
+                        <li>Possesses a solid understanding of data structures and algorithms.</li>
+                        <li>Excellent proficiency in both spoken and written English and Sinhala</li>
+                     </ul>
+                <h4>Technologies  : .NET Core, ASP.NET, .NET(MVC Architeture), Razor Page, MSSQL, C#, WEB API, Java, JavaScript, Amazon DynamoDB, Agile, Jira, ReactJs, Spring Boot, RestAPI, HTML, TailwindCSS</h4>
+
             </div>
         </div>
         <div class="about-me-card">
@@ -92,7 +120,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Charuka Kavinda</p>
+    <p id="footer">&copy; 2024 Charuka Kavinda</p>
 </footer>
 
 </body>
