--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
             <div class="about-me-text">
                 <h2>About Me</h2>
                 <h3>Charuka Kavinda</h3>
+                <br>
                 <p>Software Engineer / Full-Stack Developer </p>
+                <br>
                 <p>Highly skilled Software Engineer with a strong background in building robust and scalable applications.
                      Proficient in React, Node.js, .NET, ASP.NET Core, Web API,
                      and Spring Boot, with a proven track record of delivering 
                      high-quality solutions that meet business needs and exceed customer expectations.</p>
                 <div class="social-media-icons">
-                    <a href="https://github.com/Ckavinda98"><img src="images\general\Github_logo_PNG1.png" alt="Social Icon 1"></a>
-                    <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"><img src="images\general\Linkedin_logo_PNG3.png" alt="Social Icon 2"></a>
+                    <a href="https://github.com/Ckavinda98"><img src="images\general\Github_logo_PNG1.png" alt="Social Icon 1" id="custom-icon"></a>
+                    <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"><img src="images\general\Linkedin_logo_PNG3.png" alt="Social Icon 2" ></a>
+                    <a href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"><img src="images\general\CV1.png" alt="Social Icon 2" id="custom-icon"></a>
                     <!-- Add more social media icons as needed -->
                 </div>
                 <div class="social-media-icons">
@@ -45,41 +48,41 @@
         <h2>Recent Projects</h2>
         <div class="projects">
             <div class="project">
-                <a href=""><img src="images\projects\proj1.jpg" alt="Project 1"></a>
-                <a href="" class="link"><h3>BeezForecast</h3></a>
-                <a href="" class="link"><h3>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h3></a>
+                <a href="projects/project1.html"><img src="images\projects\proj1.jpg" alt="Project 1"></a>
+                <a href="projects/project1.html" class="link"><h3>BeezForecast</h3></a>
+                <a href="projects/project1.html" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
                 <p>Web applicaqtion to predict bees absconding form bees colonies.</p>
             </div>
             <div class="project">
                 <a href="" class="link"><img src="images\projects\Dialog\img5.jpeg" alt="Project 2"></a>
                 <a href="" class="link"> <h3>Elastic Service Dashboard</h3></a>
-                <a href="" class="link"><h3>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h3></a>
+                <a href="" class="link"><h5>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h5></a>
                 <p>Project involved integrating with the Elastic Service Dashboard.</p>
             </div>
             
             <div class="project">
                 <a href="" class="link"><img src="images\projects\Custome-Auth-MVC\Register-Page.jpg" alt="Project 2"></a>
                 <a href="" class="link"><h3>Custom Authentication</h3></a>
-                <a href="" class="link"><h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3></a>
+                <a href="" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <div class="project">
                 <a href="" class="link"><img src="images\projects\Student-MVC\Student-Page.jpg" alt="Project 2"></a>
                 <a href="" class="link"><h3>Student Managemnt CRUD System</h3></a>
-                <a href="" class="link"><h3>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h3></a>
+                <a href="" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
                 <p>Web applicaqtion for Managing Employee system.</p>
             </div>
             
             <div class="project">
                 <a href="" class="link"><img src="images\projects\Web-API-Task-CRUD\Web-API-1.jpg" alt="Project 2"></a>
                 <a href="" class="link"><h3>WEB API CRUD System</h3></a>
-                <a href="" class="link"><h3>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h3></a>
+                <a href="" class="link"><h5>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h5></a>
                 <p>Simple web applicaqtion theme park system.</p>
             </div>
             <div class="project">
                 <a href="" class="link"><img src="images\projects\proj2-Go-Cheeta.jpg" alt="Project 2"></a>
                 <a href="" class="link"><h3>Go-Cheeta-Texi-Service</h3></a>
-                <a href="" class="link"><h3>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h3></a>
+                <a href="" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <!-- Add more projects as needed -->
@@ -88,7 +91,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Charuka Kavinda</p>
+    <p id="footer">&copy; 2024 Charuka Kavinda</p>
 </footer>
 
 </body>
