--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Charuka Kavinda</p>
+    <p id="footer">&copy; 2024 Charuka Kavinda</p>
 </footer>
 
 </body>
