Adding Half of the projects

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
     <h1 class="logo">Kavinda.C@outlook.com</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="project.html">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="aboutme.html">About Me</a>
 
     </nav>
@@ -76,7 +76,9 @@
             <div class="about-me-text">
                 <h2>Experience</h2>
                 <h3>Dialog Axiata PLC 2023 (Jan-July)</h3>
-                <p>Position : Developer </p>
+                <br>
+                <h4>Position : Developer </h4>
+                <br>
                 <p>During my internship at Dialog Axiata, I took a leading role in developing the Dashboard for
                     AWS Elastic Service. Throughout this project, I actively engaged in both front-end and backend aspects. I employed the React.js library for front-end development, focusing particularly
                     on visualizing intricate details of the Elastic Service obtained from the RestAPI.
