--- a/projects/project1.html
+++ b/projects/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Project</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <h1 class="logo">Kavinda.C@outlook.com</h1>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="../project.html">Projects</a>
+        <a href="../projects.html">Projects</a>
         <a href="../aboutme.html">About Me</a>
 
     </nav>
@@ -24,7 +24,7 @@
         <div class="project-card">
             <div class="about-me-text">
                 <h2>BeezForcast</h2>
-                <h3>Discription</h3>
+                <h3>Description</h3>
                 <br>
                 <p>The Bee Colony Absconding Prediction System is a comprehensive research project aimed at 
                     forecasting the likelihood of
@@ -60,11 +60,17 @@
                 
                 <div class="social-media-icons">
                     <h2>Technologies</h2>
-                    <p>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS, Python, Google Colab, Anaconda</p>
+                    <h4>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS, Python, Google Colab, Anaconda</h4>
                 </div>
                 <div class="social-media-icons">
                     <h2>Source</h2>
                    <a href="https://github.com/Ckavinda98/FInal-Project-BeezForecast.git"><img src="..\images\general\Github_logo_PNG1.png" alt="Social Icon 1" id="custom-icon"></a>
+                   <a href="https://bee-zforecast-front-end.vercel.app/">Vercel</a>
+                   <!-- https://bee-zforecast-front-end.vercel.app/ -->
+                </div>
+                <div class="social-media-icons">
+                    <h2>Author & Time</h2>
+                    <p>Charuka Kavinda  -- 2024/04/7</p>
                 </div>
             </div>
         </div>
@@ -73,12 +79,29 @@
 </div>
 <div class="project-container">
     <div class="project-card-SC">
-        <h2>Sceenshots</h2>
-        <img src="..\images\projects\project1\home.jpg" alt="Social Icon 1" >
+        <h2>Snaps</h2>
+        <div class="project-card-SC-container">
+    <div class="project-card-SC-item">
+        <img src="..\images\projects\project1\home.jpg" alt="project-1" class="project-card-SC-container-image" >
     <p id="footer">Home Page</p>
-        <br>
-    <img src="..\images\projects\project1\login.jpg" alt="Social Icon 1" >
+</div>
+<div class="project-card-SC-item">
+    <img src="..\images\projects\project1\login.jpg" alt="project-1" class="project-card-SC-container-image">
     <p id="footer">Login Page</p>
+</div>
+<div class="project-card-SC-item">
+    <img src="..\images\projects\project1\register.jpg" alt="project-1" class="project-card-SC-container-image" >
+<p id="footer">Register From</p>
+</div>
+<div class="project-card-SC-item">
+    <img src="..\images\projects\project1\qa.jpg" alt="project-1" class="project-card-SC-container-image" >
+<p id="footer">Questions Form</p>
+</div>
+<div class="project-card-SC-item">
+    <img src="..\images\projects\project1\result.jpg" alt="project-1" class="project-card-SC-container-image" >
+<p id="footer">Prediction</p>
+</div>
+</div>
 
 
     </div>   
