--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="logo">Kavinda.C@outlook.com</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="project.html">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="aboutme.html">About Me</a>
 
     </nav>
@@ -48,41 +48,41 @@
         <h2>Recent Projects</h2>
         <div class="projects">
             <div class="project">
-                <a href="projects/project1.html"><img src="images\projects\proj1.jpg" alt="Project 1"></a>
+                <a href="projects/project1.html"><img src="images\projects\project1\home.jpg" alt="Project-1"></a>
                 <a href="projects/project1.html" class="link"><h3>BeezForecast</h3></a>
                 <a href="projects/project1.html" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
                 <p>Web applicaqtion to predict bees absconding form bees colonies.</p>
             </div>
             <div class="project">
-                <a href="" class="link"><img src="images\projects\Dialog\img5.jpeg" alt="Project 2"></a>
-                <a href="" class="link"> <h3>Elastic Service Dashboard</h3></a>
-                <a href="" class="link"><h5>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h5></a>
+                <a href="projects/project2.html" class="link"><img src="images\projects\project2\home.jpeg" alt="Project-2"></a>
+                <a href="projects/project2.html" class="link"> <h3>Elastic Service Dashboard</h3></a>
+                <a href="projects/project2.html" class="link"><h5>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h5></a>
                 <p>Project involved integrating with the Elastic Service Dashboard.</p>
             </div>
             
             <div class="project">
-                <a href="" class="link"><img src="images\projects\Custome-Auth-MVC\Register-Page.jpg" alt="Project 2"></a>
-                <a href="" class="link"><h3>Custom Authentication</h3></a>
-                <a href="" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
+                <a href="projects/project3.html" class="link"><img src="images\projects\project3\Register-Page.jpg" alt="Project-3"></a>
+                <a href="projects/project3.html" class="link"><h3>Custom Authentication</h3></a>
+                <a href="projects/project3.html" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <div class="project">
-                <a href="" class="link"><img src="images\projects\Student-MVC\Student-Page.jpg" alt="Project 2"></a>
-                <a href="" class="link"><h3>Student Managemnt CRUD System</h3></a>
-                <a href="" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
+                <a href="projects/project4.html" class="link"><img src="images\projects\project4\Student-Page.jpg" alt="Project-4"></a>
+                <a href="projects/project4.html" class="link"><h3>Student Managemnt CRUD System</h3></a>
+                <a href="projects/project4.html" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
                 <p>Web applicaqtion for Managing Employee system.</p>
             </div>
             
             <div class="project">
-                <a href="" class="link"><img src="images\projects\Web-API-Task-CRUD\Web-API-1.jpg" alt="Project 2"></a>
-                <a href="" class="link"><h3>WEB API CRUD System</h3></a>
-                <a href="" class="link"><h5>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h5></a>
+                <a href="projects/project5.html" class="link"><img src="images\projects\project5\Web-API-1.jpg" alt="Project-5"></a>
+                <a href="projects/project5.html" class="link"><h3>WEB API CRUD System</h3></a>
+                <a href="projects/project5.html" class="link"><h5>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h5></a>
                 <p>Simple web applicaqtion theme park system.</p>
             </div>
             <div class="project">
-                <a href="" class="link"><img src="images\projects\proj2-Go-Cheeta.jpg" alt="Project 2"></a>
-                <a href="" class="link"><h3>Go-Cheeta-Texi-Service</h3></a>
-                <a href="" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
+                <a href="projects/project6.html" class="link"><img src="images\projects\project6\home.jpg" alt="Project-6"></a>
+                <a href="projects/project6.html" class="link"><h3>Go-Cheeta-Texi-Service</h3></a>
+                <a href="projects/project6.html" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
                 <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
             </div>
             <!-- Add more projects as needed -->
