Add download Button

--- a/index.html
+++ b/index.html
@@ -1,98 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<header>
-    <!-- <h1>My Portfolio</h1> -->
-    <h1 class="logo">Kavinda.C@outlook.com</h1>
-    <nav>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <!-- <h1>My Portfolio</h1> -->
+      <h1 class="logo">Kavinda.C@outlook.com</h1>
+      <nav>
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="aboutme.html">About Me</a>
+      </nav>
+    </header>
 
-    </nav>
-</header>
-
-<div class="container">
-    <section id="home">
+    <div class="container">
+      <section id="home">
         <div class="about-me-card">
-            <img src="images\general\Staff-ID-Photo.jpg" alt="Your Photo">
-            <div class="about-me-text">
-                <h2>About Me</h2>
-                <h3>Charuka Kavinda</h3>
-                <br>
-                <p>Software Engineer / Full-Stack Developer </p>
-                <br>
-                <p>Highly skilled Software Engineer with a strong background in building robust and scalable applications.
-                     Proficient in React, Node.js, .NET, ASP.NET Core, Web API,
-                     and Spring Boot, with a proven track record of delivering 
-                     high-quality solutions that meet business needs and exceed customer expectations.</p>
-                <div class="social-media-icons">
-                    <a href="https://github.com/Ckavinda98"><img src="images\general\Github_logo_PNG1.png" alt="Social Icon 1" id="custom-icon"></a>
-                    <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"><img src="images\general\Linkedin_logo_PNG3.png" alt="Social Icon 2" ></a>
-                    <a href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"><img src="images\general\CV1.png" alt="Social Icon 2" id="custom-icon"></a>
-                    <!-- Add more social media icons as needed -->
-                </div>
-                <div class="social-media-icons">
-                    <h2>Contact Details</h2>
-                    <p>Email : Kavinda.C@outlook.com</p>
-                </div>
+          <img src="images\general\Staff-ID-Photo.jpg" alt="Your Photo" />
+          <div class="about-me-text">
+            <h2>About Me</h2>
+            <h3>Charuka Kavinda</h3>
+            <br />
+            <p>Software Engineer / Full-Stack Developer</p>
+            <br />
+            <p>
+              Highly skilled Software Engineer with a strong background in
+              building robust and scalable applications. Proficient in React,
+              Node.js, .NET, ASP.NET Core, Web API, and Spring Boot, with a
+              proven track record of delivering high-quality solutions that meet
+              business needs and exceed customer expectations.
+            </p>
+            <div class="social-media-icons">
+              <a href="https://github.com/Ckavinda98"
+                ><img
+                  src="images\general\Github_logo_PNG1.png"
+                  alt="Social Icon 1"
+                  id="custom-icon"
+              /></a>
+              <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"
+                ><img
+                  src="images\general\Linkedin_logo_PNG3.png"
+                  alt="Social Icon 2"
+              /></a>
+              <a
+                href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"
+                ><img
+                  src="images\general\CV1.png"
+                  alt="Social Icon 2"
+                  id="custom-icon"
+              /></a>
+              <!-- Add more social media icons as needed -->
+              <button onclick="downloadCV()">Download CV</button>
             </div>
+            <div class="social-media-icons">
+              <h2>Contact Details</h2>
+              <p>Email : Kavinda.C@outlook.com</p>
+            </div>
+          </div>
         </div>
         <h2>Recent Projects</h2>
         <div class="projects">
-            <div class="project">
-                <a href="projects/project1.html"><img src="images\projects\project1\home.jpg" alt="Project-1"></a>
-                <a href="projects/project1.html" class="link"><h3>BeezForecast</h3></a>
-                <a href="projects/project1.html" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
-                <p>Web applicaqtion to predict bees absconding form bees colonies.</p>
-            </div>
-            <div class="project">
-                <a href="projects/project2.html" class="link"><img src="images\projects\project2\home.jpeg" alt="Project-2"></a>
-                <a href="projects/project2.html" class="link"> <h3>Elastic Service Dashboard</h3></a>
-                <a href="projects/project2.html" class="link"><h5>Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java, Javascript, TailwindCSS</h5></a>
-                <p>Project involved integrating with the Elastic Service Dashboard.</p>
-            </div>
-            
-            <div class="project">
-                <a href="projects/project3.html" class="link"><img src="images\projects\project3\Register-Page.jpg" alt="Project-3"></a>
-                <a href="projects/project3.html" class="link"><h3>Custom Authentication</h3></a>
-                <a href="projects/project3.html" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
-                <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
-            </div>
-            <div class="project">
-                <a href="projects/project4.html" class="link"><img src="images\projects\project4\Student-Page.jpg" alt="Project-4"></a>
-                <a href="projects/project4.html" class="link"><h3>Student Managemnt CRUD System</h3></a>
-                <a href="projects/project4.html" class="link"><h5>Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#</h5></a>
-                <p>Web applicaqtion for Managing Employee system.</p>
-            </div>
-            
-            <div class="project">
-                <a href="projects/project5.html" class="link"><img src="images\projects\project5\Web-API-1.jpg" alt="Project-5"></a>
-                <a href="projects/project5.html" class="link"><h3>WEB API CRUD System</h3></a>
-                <a href="projects/project5.html" class="link"><h5>Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#</h5></a>
-                <p>Simple web applicaqtion theme park system.</p>
-            </div>
-            <div class="project">
-                <a href="projects/project6.html" class="link"><img src="images\projects\project6\home.jpg" alt="Project-6"></a>
-                <a href="projects/project6.html" class="link"><h3>Go-Cheeta-Texi-Service</h3></a>
-                <a href="projects/project6.html" class="link"><h5>Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript, TailwindCSS</h5></a>
-                <p>Simple web applicaqtion for booking taxi and monitering the system.</p>
-            </div>
-            <!-- Add more projects as needed -->
+          <div class="project">
+            <a href="projects/project1.html"
+              ><img src="images\projects\project1\home.jpg" alt="Project-1"
+            /></a>
+            <a href="projects/project1.html" class="link"
+              ><h3>BeezForecast</h3></a
+            >
+            <a href="projects/project1.html" class="link"
+              ><h5>
+                Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript,
+                TailwindCSS
+              </h5></a
+            >
+            <p>
+              Web applicaqtion to predict bees absconding form bees colonies.
+            </p>
+          </div>
+          <div class="project">
+            <a href="projects/project2.html" class="link"
+              ><img src="images\projects\project2\home.jpeg" alt="Project-2"
+            /></a>
+            <a href="projects/project2.html" class="link">
+              <h3>Elastic Service Dashboard</h3></a
+            >
+            <a href="projects/project2.html" class="link"
+              ><h5>
+                Technologies : ReactJs, Spring Boot, DynamoDB, RestAPI, Java,
+                Javascript, TailwindCSS
+              </h5></a
+            >
+            <p>
+              Project involved integrating with the Elastic Service Dashboard.
+            </p>
+          </div>
+
+          <div class="project">
+            <a href="projects/project3.html" class="link"
+              ><img
+                src="images\projects\project3\Register-Page.jpg"
+                alt="Project-3"
+            /></a>
+            <a href="projects/project3.html" class="link"
+              ><h3>Custom Authentication</h3></a
+            >
+            <a href="projects/project3.html" class="link"
+              ><h5>
+                Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#
+              </h5></a
+            >
+            <p>
+              Simple web applicaqtion for booking taxi and monitering the
+              system.
+            </p>
+          </div>
+          <div class="project">
+            <a href="projects/project4.html" class="link"
+              ><img
+                src="images\projects\project4\Student-Page.jpg"
+                alt="Project-4"
+            /></a>
+            <a href="projects/project4.html" class="link"
+              ><h3>Student Managemnt CRUD System</h3></a
+            >
+            <a href="projects/project4.html" class="link"
+              ><h5>
+                Technologies : .NET(MVC Architeture), Razor Page, MSSQL, C#
+              </h5></a
+            >
+            <p>Web applicaqtion for Managing Employee system.</p>
+          </div>
+
+          <div class="project">
+            <a href="projects/project5.html" class="link"
+              ><img
+                src="images\projects\project5\Web-API-1.jpg"
+                alt="Project-5"
+            /></a>
+            <a href="projects/project5.html" class="link"
+              ><h3>WEB API CRUD System</h3></a
+            >
+            <a href="projects/project5.html" class="link"
+              ><h5>
+                Technologies : .NET(Entity Framwork), WEB-API, MSSQL, C#
+              </h5></a
+            >
+            <p>Simple web applicaqtion theme park system.</p>
+          </div>
+          <div class="project">
+            <a href="projects/project6.html" class="link"
+              ><img src="images\projects\project6\home.jpg" alt="Project-6"
+            /></a>
+            <a href="projects/project6.html" class="link"
+              ><h3>Go-Cheeta-Texi-Service</h3></a
+            >
+            <a href="projects/project6.html" class="link"
+              ><h5>
+                Technologies : ReactJs, Spring Boot, MYSQL, Java, Javascript,
+                TailwindCSS
+              </h5></a
+            >
+            <p>
+              Simple web applicaqtion for booking taxi and monitering the
+              system.
+            </p>
+          </div>
+          <!-- Add more projects as needed -->
         </div>
-    </section>
-</div>
+      </section>
+    </div>
 
-<footer>
-    <p id="footer">&copy; 2024 Charuka Kavinda</p>
-</footer>
-
-</body>
+    <footer>
+      <p id="footer">&copy; 2024 Charuka Kavinda</p>
+    </footer>
+  </body>
 </html>
