Add Style to button

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
                   id="custom-icon"
               /></a>
               <!-- Add more social media icons as needed -->
-              <button onclick="downloadCV()">Download CV</button>
+              <button class="download-btn" onclick="downloadCV()">
+                Download CV
+              </button>
             </div>
             <div class="social-media-icons">
+              s
               <h2>Contact Details</h2>
               <p>Email : Kavinda.C@outlook.com</p>
             </div>
