--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                   src="images\general\Linkedin_logo_PNG3.png"
                   alt="Social Icon 2"
               /></a>
-              <a
+              <!-- <a
                 href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"
                 ><img
                   src="images\general\CV1.png"
                   alt="Social Icon 2"
                   id="custom-icon"
-              /></a>
+              /></a> -->
               <!-- Add more social media icons as needed -->
               <button class="download-btn" onclick="downloadCV()">
                 Download CV
@@ -181,7 +181,7 @@
     </footer>
     <script>
       function downloadCV() {
-        const cvUrl = "D:/Portofolio/Portofolio/UpdatedCV.pdf";
+        const cvUrl = "Portofolio/UpdatedCV.pdf";
         const link = document.createElement("a");
         link.href = cvUrl;
         link.download = "UpdatedCV.pdf";
