--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         const cvUrl = "Portofolio/UpdatedCV.pdf";
         const link = document.createElement("a");
         link.href = cvUrl;
-        link.download = "UpdatedCV.pdf";
+        link.setAttribute("download", "UpdatedCV.pdf");
         link.target = "_blank";
         document.body.appendChild(link);
         link.click();
