--- a/index.html
+++ b/index.html
@@ -35,32 +35,25 @@
               business needs and exceed customer expectations.
             </p>
             <div class="social-media-icons">
-              <a href="https://github.com/Ckavinda98"
-                ><img
-                  src="images\general\Github_logo_PNG1.png"
-                  alt="Social Icon 1"
-                  id="custom-icon"
-              /></a>
-              <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"
-                ><img
-                  src="images\general\Linkedin_logo_PNG3.png"
-                  alt="Social Icon 2"
-              /></a>
-              <!-- <a
-                href="https://1drv.ms/b/s!Aiz-ugjpHPRszTCnvQgoHct89Ge2?e=RiASLd"
-                ><img
-                  src="images\general\CV1.png"
-                  alt="Social Icon 2"
-                  id="custom-icon"
-              /></a> -->
-              <!-- Add more social media icons as needed -->
-              <button class="download-btn" onclick="downloadCV()">
-                Download CV
-              </button>
+              <button onclick="downloadCV()">Download CV</button>
             </div>
             <div class="social-media-icons">
               <h2>Contact Details</h2>
               <p>Email : Kavinda.C@outlook.com</p>
+              <div class="social-media">
+                <a href="https://github.com/Ckavinda98"
+                  ><img
+                    src="images\general\Github_logo_PNG1.png"
+                    alt="Social Icon 1"
+                    id="custom-icon"
+                /></a>
+                <a href="https://www.linkedin.com/in/charuka-kavinda-6235aa20a/"
+                  ><img
+                    src="images\general\Linkedin_logo_PNG3.png"
+                    alt="Social Icon 2"
+                    id="custom-icon"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
