Fixsing About Me Page

--- a/aboutme.html
+++ b/aboutme.html
@@ -24,9 +24,7 @@
           <div class="about-me-text">
             <h2>About Me</h2>
             <h3>Charuka Kavinda</h3>
-            <br />
             <p>Software Engineer / Full-Stack Developer</p>
-            <br />
             <p>
               Highly skilled Software Engineer with a strong background in
               building robust and scalable applications. Proficient in React,
@@ -55,6 +53,64 @@
                 /></a>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="about-me-card">
+          <div class="about-me-text">
+            <h2>Skills</h2>
+            <h3>Acaademic & Enterprise (2020 - Present)</h3>
+            <ul>
+              <li>
+                One year of academic experience and six months of professional
+                experience in Reactjs.
+              </li>
+              <li>
+                Two years of academic experience and six months of professional
+                experience in JavaScript and ES6.
+              </li>
+              <li>
+                Two years of academic experience and six months in Java and
+                Hibernate Spring Boot Framework.
+              </li>
+              <li>
+                One year of academic experience with C#, MVC architecture, and
+                the .NET framework/ASP.NET, including familiarity with .NET Core
+                and ASP.NET Web API.
+              </li>
+              <li>
+                One year of academic experience with Angular for front-end
+                developmen
+              </li>
+              <li>
+                Three years of academic and professional experience in HTML,
+                CSS, and Tailwind.
+              </li>
+              <li>
+                Two years of academic and professional experience in GitHub and
+                GitLab.
+              </li>
+              <li>
+                Six months of professional experience in AWS DynamoDB, coupled
+                with two years of academic exposure to NoSQL, SQL, and MySQL
+                databases.
+              </li>
+              <li>
+                Six months of professional experience in Agile Methodology.
+              </li>
+              <li>
+                Possesses a solid understanding of data structures and
+                algorithms.
+              </li>
+              <li>
+                Excellent proficiency in both spoken and written English and
+                Sinhala
+              </li>
+            </ul>
+            <h4>
+              Technologies : .NET Core, ASP.NET, .NET(MVC Architeture), Razor
+              Page, MSSQL, C#, WEB API, Java, JavaScript, Amazon DynamoDB,
+              Agile, Jira, ReactJs, Spring Boot, RestAPI, HTML, TailwindCSS
+            </h4>
           </div>
         </div>
         <div class="about-me-card">
@@ -140,17 +196,5 @@
     <footer>
       <p id="footer">&copy; 2024 Charuka Kavinda</p>
     </footer>
-    <script>
-      function downloadCV() {
-        const cvUrl = "Portofolio/UpdatedCV.pdf";
-        const link = document.createElement("a");
-        link.href = cvUrl;
-        link.setAttribute("download", "UpdatedCV.pdf");
-        link.target = "_blank";
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-      }
-    </script>
   </body>
 </html>
